// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ molecules / Dropdown ] #Dropdown when 'Dropdown' Default is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown-icon icon color-base size-md background-highlight"
      style="width: 35px; height: 35px;"
    >
      <svg
        height="35"
        viewBox="0 0 15 9"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <select
      class="dropdown-select"
    >
      <option
        value="800"
      >
        8:00 AM
      </option>
      <option
        value="1300"
      >
        1:00 PM
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`[ molecules / Dropdown ] #Dropdown when 'Dropdown' Inline is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="dropdown is-inline"
  >
    <div
      class="dropdown-icon icon color-base size-md background-highlight"
      style="width: 35px; height: 35px;"
    >
      <svg
        height="35"
        viewBox="0 0 15 9"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <select
      class="dropdown-select"
    >
      <option
        value="800"
      >
        8:00 AM
      </option>
      <option
        value="1300"
      >
        1:00 PM
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`[ molecules / Dropdown ] #Dropdown when 'Dropdown' Value is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown-icon icon color-base size-md background-highlight"
      style="width: 35px; height: 35px;"
    >
      <svg
        height="35"
        viewBox="0 0 15 9"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <select
      class="dropdown-select"
    >
      <option
        value="800"
      >
        8:00 AM
      </option>
      <option
        value="1300"
      >
        1:00 PM
      </option>
    </select>
  </div>
</DocumentFragment>
`;
